<resources>
    <string name="app_name">Sample</string>
    <string name="chat_avatar">Аватар чата</string>
    <string name="channels">Каналы</string>
    <string name="groups">Группы</string>
    <string name="private_">Личные</string>
    <string name="all_chats">Все</string>
    <string name="search_chats">Поиск чатов</string>
    <string name="send">Отправить</string>
    <string name="text_message">Написать сообщение</string>
    <string name="copy_mes">Копировать</string>
    <string name="delete">Удалить</string>
    <string name="download">Скачать</string>
    <string name="downloading_image">Загрузка изображения</string>
    <string name="downloading_image_description">Пожалуйста, подождите..</string>
    <string name="attach_image">Прикрепить изображение</string>
    <string name="connected">Подключено</string>
    <string name="disconnected">Отключено</string>
    <string name="end_call">Завершить</string>
    <string name="input_volume">Громкость микрофона</string>
    <string name="output_volume">Громкость динамиков</string>
    <string name="settings">Настройки</string>
    <string name="notification">Уведомления</string>
    <string name="dark_theme">Темная тема</string>
    <string name="exit">Выйти</string>
    <string name="chats">Чаты</string>
    <string name="call">Звонок</string>
    <string name="voice">Голос</string>
    <string name="details_chat">Детали чата</string>
    <string name="registration">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="pass_confirm">Подтвердите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login1">Войти</string>
    <string name="create_acc">Создать аккаунт</string>
    <string name="entrance">Вход</string>

<!--kotlin-->
    <string name="chat_avatar_description">Аватар чата %s</string>
    <string name="copied_message">Скопировано</string>
    <string name="online_members_count">%d участников</string>
    <string name="audio_settings_title">Настройки аудио</string>
    <string name="save_button">Сохранить</string>
    <string name="cancel_button">Отмена</string>
    <string name="notifications_enabled">Уведомления включены</string>
    <string name="notifications_disabled">Уведомления выключены</string>
    <string name="dark_theme_enabled">Темная тема включена</string>
    <string name="dark_theme_disabled">Темная тема выключена</string>
    <string name="default_channel_name">Голосовой канал</string>
    <string name="connection_status_connected">Подключено к \"%1$s\"</string>
    <string name="connection_status_disconnected">Отключено</string>
    <string name="error_fill_all_fields">Заполните все поля</string>
    <string name="error_wrong_credentials">Неверный логин или пароль</string>
    <string name="error_password_mismatch">Пароли не совпадают</string>
    <string name="success_account_created">Аккаунт создан</string>
    <string name="error_user_exists">Пользователь уже существует</string>

    <string name="select_language">Выберите язык</string>
    <string name="russian">Русский</string>
    <string name="english">English</string>
    <string name="change_language">Изменить язык</string>
    <string name="cancel">Отмена</string>

</resources>